# mlops-course1

./: .pre-commit-config.yaml  .pytest.ini  .sops.yaml  LICENSE  README.md  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py
config/: .env.test
docker/: Dockerfile  docker-compose.yaml
models/: model_iris.joblib
src/: app.py  constants.py  inference.py  main.py  settings.py  training.py
tests/: test_endpoints.py  test_settings.py
